Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.8.0-beta1
-
macOS 10.13.6
Xcode 9.4.1
lldb-902.0.79.7
-
-
36b654567d639c313d7c1c39e360bcd8915f0ed5 (qt-creator/qt-creator/4.8)
Description
The operate by instruction feature of the debugger only really works after stopping debugging and starting another debugger run.
Ways to reproduce:
- Run simple app from tests and set a breakpoint.
- Toggle "Operate by instruction" in the Debugger menu.
- Single step the code
Expected would be a switch from C++ code to assembly right away, but this does not happen.
Only after stopping the debugger and starting it again do I see assembly code.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-21212 Single-stepping in Operate By Instruction mode steps by source lines instead of instructions
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-21211 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
241984,3 | Debugger: Finalize moving Operate by Instruction to engines | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |